--- a/src/app/_components/articles/articles.component.html
+++ b/src/app/_components/articles/articles.component.html
@@ -13,7 +13,7 @@
           </div>
           <div class="modal-body mx-3">
             <form #addForm>
-              <div class="md-form mb-5" *ngIf="currentUser.rol === 'master'">
+              <div class="md-form mb-5">
                 <input type="text" id="name" class="form-control validate" mdbInput required="required">
                 <label data-error="wrong" data-success="right" for="name">Nombre</label>
               </div>
