--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
   <!--/. Sidebar navigation -->
 
   <!-- Navbar -->
-  <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark info-color double-nav"
+  <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark blue-gradient double-nav"
               [containerInside]="false">
 
     <navlinks class="navbar-container">
