--- a/src/app/_components/modals/confirm-delete/confirm-delete.component.html
+++ b/src/app/_components/modals/confirm-delete/confirm-delete.component.html
@@ -10,8 +10,7 @@
         </button>
       </div>
       <div class="modal-body mx-3">
-        <p *ngIf="deletedObject" class="text-center h4">¿Estás seguro que deseas eliminar al
-          artículo {{deletedObject.name}}?</p>
+        <p *ngIf="deletedObject" class="text-center h4">¿Estás seguro que deseas eliminar {{deletedObject.name}}?</p>
 
       </div>
       <div class="modal-footer d-flex justify-content-center deleteButtonsWrapper">
