--- a/src/app/_components/invoice-details/invoice-details.component.html
+++ b/src/app/_components/invoice-details/invoice-details.component.html
@@ -6,7 +6,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header text-center">
-            <h4 class="modal-title w-100 font-weight-bold info-text ml-5">Añadir detalle</h4>
+            <h4 class="modal-title w-100 font-weight-bold info-text ml-5">Añadir articulo</h4>
             <button type="button" class="close text-primary" (click)="modalAdd.hide()" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -15,18 +15,28 @@
             <form #addForm>
               <div class="md-form mb-5">
                 <input type="text" id="name" class="form-control validate" mdbInput required="required">
-                <label data-error="wrong" data-success="right" for="name">Artículo</label>
+                <label data-error="wrong" data-success="right" for="name">User</label>
               </div>
 
               <div class="md-form mb-5">
-                <input type="number" id="category" class="form-control validate" mdbInput required="required">
-                <label data-error="wrong" data-success="right" for="category">Cantidad</label>
+                <input type="text" id="category" class="form-control validate" mdbInput required="required">
+                <label data-error="wrong" data-success="right" for="category">Categoría</label>
+              </div>
+
+              <div class="md-form mb-5">
+                <input type="number" id="unit_price" class="form-control validate" mdbInput>
+                <label data-error="wrong" data-success="right" for="unit_price">Precio por unidad</label>
+              </div>
+
+              <div class="md-form mb-5">
+                <input type="text" id="inits_in_stock" class="form-control validate" mdbInput>
+                <label data-error="wrong" data-success="right" for="inits_in_stock">Unidades en stock</label>
               </div>
             </form>
           </div>
           <div class="modal-footer d-flex justify-content-center buttonAddFormWrapper">
             <button class="btn btn-info btn-block buttonAdd" data-dismiss="modal"
-                    (click)="insertarArticulo(addForm, modalAdd)">Insertar detalle
+                    (click)="insertInvoice(addForm, modalAdd)">Insertar articulo
               <i class="fas fa-paper-plane-o ml-1"></i>
             </button>
           </div>
@@ -34,64 +44,33 @@
       </div>
     </div>
 
-    <div mdbModal #successInsertModal="mdbModal" class="modal fade top" tabindex="-1" role="dialog"
-         aria-labelledby="insertModal" aria-hidden="true">
-      <div class="modal-dialog modal-frame modal-top" role="document">
-        <div class="modal-content" style="background: #00C851; text-align: center; color: white;">
-          <div class="modal-header">
-            <h4 class="modal-title w-100">Articulo insertado correctamente</h4>
-          </div>
-        </div>
-      </div>
-    </div>
+    <!-- SUCCESS DELETE MODAL -->
+    <app-success-bottom-modal *ngIf="isSuccessDelete"
+                              [message]="message"
+                              (emitter)="hideSuccessDeleteModal()"
+                              [isVisible]="isSuccessDelete">
+    </app-success-bottom-modal>
 
-    <div mdbModal #successUpdateModal="mdbModal" class="modal fade top" tabindex="-1" role="dialog"
-         aria-labelledby="updateModal" aria-hidden="true">
-      <div class="modal-dialog modal-frame modal-top" role="document">
-        <div class="modal-content" style="background: #00C851; text-align: center; color: white;">
-          <div class="modal-header">
-            <h4 class="modal-title w-100">Articulo actualizado correctamente</h4>
-          </div>
-        </div>
-      </div>
-    </div>
+    <!-- SUCCESS UPDATE MODAL -->
+    <app-success-bottom-modal *ngIf="isSuccessUpdate"
+                              [message]="message"
+                              (emitter)="hideSuccessUpdateModal()"
+                              [isVisible]="isSuccessUpdate">
+    </app-success-bottom-modal>
 
-    <div mdbModal #successDeleteModal="mdbModal" class="modal fade top" tabindex="-1" role="dialog"
-         aria-labelledby="deleteModal" aria-hidden="true">
-      <div class="modal-dialog modal-frame modal-top" role="document">
-        <div class="modal-content" style="background: #00C851; text-align: center; color: white;">
-          <div class="modal-header">
-            <h4 class="modal-title w-100">Articulo eliminado correctamente</h4>
-          </div>
-        </div>
-      </div>
-    </div>
+    <!-- SUCCESS INSERT MODAL -->
+    <app-success-bottom-modal *ngIf="isSuccessInsert"
+                              [message]="message"
+                              (emitter)="hideSuccessInsertModal()"
+                              [isVisible]="isSuccessInsert">
+    </app-success-bottom-modal>
 
-    <div mdbModal #deleteModal="mdbModal" class="modal fade" id="modalDelete" tabindex="-1" role="dialog"
-         aria-labelledby="deleteModal"
-         aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header text-center">
-            <h4 class="modal-title w-100 font-weight-bold ml-5 text-danger">Eliminar</h4>
-            <button type="button" class="close text-danger" (click)="deleteModal.hide()" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body mx-3">
-            <p *ngIf="selectedArticle" class="text-center h4">¿Estás seguro que deseas eliminar al
-              artículo {{selectedArticle.name}}?</p>
-
-          </div>
-          <div class="modal-footer d-flex justify-content-center deleteButtonsWrapper">
-            <a (click)="deleteModal.hide()" mdbWavesEffect type="button" class="btn-floating red mr-5"><i
-              class="fa fa-times" aria-hidden="true"></i></a>
-            <a (click)="modalRemove(deleteModal)" mdbWavesEffect type="button" class="btn-floating green"><i
-              class="fa fa-check" aria-hidden="true"></i></a>
-          </div>
-        </div>
-      </div>
-    </div>
+    <app-confirm-delete *ngIf="confirmDeleteModalIsVisible"
+                        [deletedObject]="selectedInvoice"
+                        [message]="message"
+                        (emitter)="modalRemove()"
+                        [isVisible]="confirmDeleteModalIsVisible">
+    </app-confirm-delete>
   </div>
 
   <div class="row">
@@ -128,43 +107,58 @@
               scope="col">{{head}}</th>
         </tr>
         </thead>
-        <tbody *ngIf="isMaster">
+        <tbody>
         <tr *ngFor="let item of table.performSearch(this.searchText); let i = index" #tableRow>
           <td>
-            <ng-container>
-              {{item.invoice_id}}
+            <ng-container *ngIf="i !== rowIndex">
+              {{item.id}}
+            </ng-container>
+            <ng-container *ngIf="i == rowIndex">
+              <input disabled [size]="1" type="number" class="form-control" [value]="item.id">
             </ng-container>
           </td>
           <td>
             <ng-container *ngIf="i !== rowIndex">
-              {{item.article_id}}
+              {{item.user_id}}
             </ng-container>
             <ng-container *ngIf="i == rowIndex">
-              <input [size]="item.article_id.length" type="text" class="form-control" [value]="item.article_id">
+              <input disabled [size]="1" type="number" class="form-control" [value]="item.user_id">
             </ng-container>
           </td>
           <td>
             <ng-container *ngIf="i !== rowIndex">
-              {{item.quantity}}
+              {{item.creation_date}}
             </ng-container>
             <ng-container *ngIf="i == rowIndex">
-              <input [size]="item.quantity.length" type="text" class="form-control" [value]="item.quantity">
+              <input disabled [size]="item.creation_date.length" type="text" class="form-control"
+                     [value]="item.creation_date">
             </ng-container>
           </td>
           <td>
             <ng-container *ngIf="i !== rowIndex">
-              {{item.unit_price}}
+              {{item.shipping_method}}
             </ng-container>
             <ng-container *ngIf="i == rowIndex">
-              <input [size]="1" type="number" class="form-control" [value]="item.unit_price">
+              <input [size]="item.shipping_method.length" type="text" class="form-control"
+                     [value]="item.shipping_method">
             </ng-container>
           </td>
           <td>
             <ng-container *ngIf="i !== rowIndex">
-              {{item.units_in_stock}}
+              {{item.payment_method}}
             </ng-container>
             <ng-container *ngIf="i == rowIndex">
-              <input [size]="1" type="number" class="form-control" [value]="item.units_in_stock">
+              <input disabled [size]="item.payment_method.length" type="text" class="form-control"
+                     [value]="item.payment_method">
+            </ng-container>
+          </td>
+          <td>
+            <ng-container *ngIf="i !== rowIndex">
+              {{item.estimated_delivery_date}}
+            </ng-container>
+            <ng-container *ngIf="i == rowIndex">
+              <mdb-date-picker name="estimated_delivery_date" [placeholder]="'Selected date'"
+                               [(ngModel)]="selectedDate"></mdb-date-picker>
             </ng-container>
           </td>
           <td *ngIf="isTableEditable">
@@ -174,7 +168,10 @@
               <div *ngIf="visibleEditIcons && i == rowIndex" class="d-flex flex-center">
                 <a (click)="approveEdit(tableRow)" mdbWavesEffect type="button" class="btn-floating success-green mr-2"><i
                   class="fa fa-check" aria-hidden="true"></i></a>
-                <a (click)="showDeleteModal()" mdbWavesEffect type="button" class="btn-floating error-red mr-2"><i
+                <a (click)="approveEdit(tableRow)" mdbWavesEffect type="button" class="btn-floating secondary-color  mr-2"><i
+                  class="fa fa-list" aria-hidden="true"></i></a>
+                <a (click)="showConfirmDeleteModal()" mdbWavesEffect type="button"
+                   class="btn-floating error-red mr-2"><i
                   class="fa fa-trash-alt" aria-hidden="true"></i></a>
               </div>
             </div>
@@ -186,7 +183,7 @@
           <td colspan="8">
             <div class="d-flex flex-center">
               <span>Mostrando desde {{table.paginationInfo.firstItem}} hasta {{table.paginationInfo.lastItem}}
-                de {{table.paginationInfo.allItems}} detalles</span>
+                de {{table.paginationInfo.allItems}} articulos</span>
               <div class="flex-1"></div>
               <mdb-icon fas icon="angle-left" size="lg" (click)="table.prevPage()" class="p-2"
                         [ngClass]="{'disabled text-muted': table.disablePrevious()}" mdbWavesEffect></mdb-icon>
