--- a/src/app/_components/articles/articles.component.html
+++ b/src/app/_components/articles/articles.component.html
@@ -36,7 +36,7 @@
           </div>
           <div class="modal-footer d-flex justify-content-center buttonAddFormWrapper">
             <button class="btn btn-info btn-block buttonAdd" data-dismiss="modal"
-                    (click)="insertarArticulo(addForm, modalAdd)">Insertar articulo
+                    (click)="insertArticle(addForm, modalAdd)">Insertar articulo
               <i class="fas fa-paper-plane-o ml-1"></i>
             </button>
           </div>
