--- a/src/app/_components/invoice-details/invoice-details.component.html
+++ b/src/app/_components/invoice-details/invoice-details.component.html
@@ -36,7 +36,7 @@
           </div>
           <div class="modal-footer d-flex justify-content-center buttonAddFormWrapper">
             <button class="btn btn-info btn-block buttonAdd" data-dismiss="modal"
-                    (click)="insertInvoice(addForm, modalAdd)">Insertar articulo
+                    (click)="insertInvoiceDetail(addForm, modalAdd)">Insertar articulo
               <i class="fas fa-paper-plane-o ml-1"></i>
             </button>
           </div>
@@ -66,7 +66,7 @@
     </app-success-bottom-modal>
 
     <app-confirm-delete *ngIf="confirmDeleteModalIsVisible"
-                        [deletedObject]="selectedInvoice"
+                        [deletedObject]="selectedInvoiceDetail"
                         [message]="message"
                         (emitter)="modalRemove()"
                         [isVisible]="confirmDeleteModalIsVisible">
@@ -90,8 +90,10 @@
           <span class="font-weight-bolder">Articulos</span>
         </div>
         <div class="col-md-4 my-3 d-flex">
+          <a (click)="back()" mdbWavesEffect type="button" class="btn-floating info-color text-align-center"><i
+            class="fa fa-arrow-left" aria-hidden="true"></i></a>
           <a (click)="modalAdd.show()" mdbWavesEffect type="button" class="btn-floating info-color text-align-center"><i
-            class="fa fa-plus" aria-hidden="true"></i>Añadir</a>
+            class="fa fa-plus" aria-hidden="true"></i></a>
         </div>
 
         <div class="col-md-4 my-3 text-right d-flex align-items-center text-align-center">
@@ -168,7 +170,8 @@
               <div *ngIf="visibleEditIcons && i == rowIndex" class="d-flex flex-center">
                 <a (click)="approveEdit(tableRow)" mdbWavesEffect type="button" class="btn-floating success-green mr-2"><i
                   class="fa fa-check" aria-hidden="true"></i></a>
-                <a (click)="approveEdit(tableRow)" mdbWavesEffect type="button" class="btn-floating secondary-color  mr-2"><i
+                <a (click)="approveEdit(tableRow)" mdbWavesEffect type="button"
+                   class="btn-floating secondary-color  mr-2"><i
                   class="fa fa-list" aria-hidden="true"></i></a>
                 <a (click)="showConfirmDeleteModal()" mdbWavesEffect type="button"
                    class="btn-floating error-red mr-2"><i
