--- a/src/app/_components/articles/articles.component.html
+++ b/src/app/_components/articles/articles.component.html
@@ -90,8 +90,8 @@
           <span class="font-weight-bolder">Articulos</span>
         </div>
         <div class="col-md-4 my-3 d-flex">
-          <a (click)="modalAdd.show()" mdbWavesEffect type="button" class="btn-floating info-color text-align-center"><i
-            class="fa fa-plus" aria-hidden="true"></i>Añadir</a>
+          <a (click)="modalAdd.show()" mdbWavesEffect type="button" class="btn-floating success-green text-align-center"><i
+            class="fa fa-plus" aria-hidden="true"></i></a>
         </div>
 
         <div class="col-md-4 my-3 text-right d-flex align-items-center text-align-center">
