--- a/src/app/_components/invoice-details/invoice-details.component.html
+++ b/src/app/_components/invoice-details/invoice-details.component.html
@@ -92,7 +92,8 @@
         <div class="col-md-4 my-3 d-flex">
           <a (click)="back()" mdbWavesEffect type="button" class="btn-floating info-color text-align-center"><i
             class="fa fa-arrow-left" aria-hidden="true"></i></a>
-          <a (click)="modalAdd.show()" mdbWavesEffect type="button" class="btn-floating info-color text-align-center"><i
+          <a (click)="modalAdd.show()" mdbWavesEffect type="button"
+             class="btn-floating success-green text-align-center"><i
             class="fa fa-plus" aria-hidden="true"></i></a>
         </div>
 
