--- a/src/app/_components/invoices/invoices.component.html
+++ b/src/app/_components/invoices/invoices.component.html
@@ -90,7 +90,8 @@
           <span class="font-weight-bolder">Articulos</span>
         </div>
         <div class="col-md-4 my-3 d-flex">
-          <a (click)="modalAdd.show()" mdbWavesEffect type="button" class="btn-floating success-green  text-align-center"><i
+          <a (click)="modalAdd.show()" mdbWavesEffect type="button"
+             class="btn-floating success-green  text-align-center"><i
             class="fa fa-plus" aria-hidden="true"></i></a>
         </div>
 
